Veretino 0.5.1
* Fixed saving the DB name prefix in Settings.

---
Veretino 0.5.0
What's new:
* New Database Creation Dialog, combining basic settings and filter creation.
* A newly creating database can be flagged as immutable ("Deny Changes"), which will prevent changes to it in the future.
* Improved file type filter creation process.
    Instead of a Permanent filter, selected extensions can be flexibly remembered between sessions, adapting to the contents of working folders.
* It is now possible to check the modification date of listed files during database parsing.
    Makes it easier to work with obviously changed items.
* The Contents List (folder or db) now supports multiple selections and displays the corresponding amounts.
* Now files without read permissions can be excluded when creating the list (customizable).
* Added the ability to export individual checksums from the database to a digest file (*.ver(.json) --> *.sha1/256/512).
* Copying files and folders is now also available when browsing the file system.
* The Unreadable Status is divided into two separate ones: UnPermitted ("no permissions") and ReadError ("read error").
    The first means no read permissions. Second, an error occurred during reading (damaged file: bad block, disk or file system error).

Fixes and Minor Enhancements:
* Fixed display of item's zero-byte size.
* Folder Contents dialog: fixed adding the sizes of files without read permissions.
* Fixed crash when opening a database while another parsing is ongoing.
* Improved parsing of items that were marked unreadable during database creation.
* Menu action "Open Branch": added finding renamed branch files.
* Added finding of all existing databases in the working folder.

Internal changes:
* Redesigned task management system.
* Significant optimization of the Data Model creation process (x10 faster for Large lists).
* Multiple optimizations of basic functions.

Removed:
* Permanent Filter.