@@ -38,6 +38,7 @@ set(PROJECT_SOURCES
     src/iconprovider.h
     src/itemfiletype.h
     src/jsondb.h
+    src/lineedit.h
     src/mainwindow.h
     src/manager.h
     src/menuactions.h
@@ -72,6 +73,7 @@ set(PROJECT_SOURCES
     src/iconprovider.cpp
     src/itemfiletype.cpp
     src/jsondb.cpp
+    src/lineedit.cpp
     src/main.cpp
     src/mainwindow.cpp
     src/manager.cpp
